[metadata]
name = tes.py
version = 0.1.0
descriptions = TSE
author = lluar
author_email = lluar@ccodein.org
url = www.ccodein.org
license = AGPLv3
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.10


[options.extras_require]
develop =
	pytest
	pytest-cov
	mypy
	flake8
	flake8-docstrings
	sphinx
	sphinx-rtd-theme

[flake8]
exclude =
	.git
	__pycache__
	build
	dist
	docs
	.undodir

[tool:pytest]
pythonpath = .

[mypy]
files = tse
disallow_untyped_defs = True

