[metadata]
name = tes.py
version = 0.1.0
descriptions = TSE
author = lluar
author_email = lluar@ccodein.org
url = www.ccodein.org
license = AGPLv3
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.10


[options.extras_require]
develop =
	pytest
	pytest-cov
	mypy
	flake8
	flake8-docstrings
	sphinx
	sphinx-rtd-theme

[flake8]
exclude =
	.git
	__pycache__
	build
	dist
	docs
	.undodir
	tests

[tool:pytest]
pythonpath = .
markers =
	epson: If Epsen TSE is available.
# addopts = -m "not epson"

[mypy]
files = tse
disallow_untyped_defs = True

