[metadata]
name = tse.py
version = 1.0.0
descriptions = TSE
author = lluar
author_email = lluar@ccodein.org
url = https://gitlab.com/ccodein/tse.py
license = MIT
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.10


[options.extras_require]
develop =
	pytest
	pytest-cov
	mypy
	flake8
	flake8-docstrings
	sphinx
	sphinx-rtd-theme
	sphinxcontrib-mermaid

[flake8]
exclude =
	.git
	__pycache__
	build
	dist
	docs
	.undodir
	tests

[tool:pytest]
pythonpath = .
markers =
	epson: If Epsen TSE is available.

[mypy]
files = tse
disallow_untyped_defs = True

